// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentsContainer component renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 {
  margin-left: 1rem;
  font-size: 1.4rem;
  grid-template-columns: [controls] 1fr;
}

.c0 label {
  font-family: 'BCSans-Bold';
}

.c0 .check-field {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .check-field label {
  width: 100%;
}

.c0 .form-group {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .form-group input,
.c0 .form-group select {
  width: 70%;
}

.c0 > .form-label {
  grid-column: controls;
  font-family: 'BcSans-Bold';
}

.c0 .form-control {
  font-family: 'BcSans';
}

.c0 .required .form-label:after {
  content: ' *';
}

.c4.table {
  min-width: 155rem;
}

.c4.table .thead .tr .th {
  padding: 0.5rem 0.5rem;
  font-size: 1.4rem;
  position: relative;
  color: white;
}

.c4.table .thead .tr .th .tooltip-icon {
  color: white;
  float: right;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-left: 0.5rem;
  height: 1.1rem;
  width: 1.1rem;
}

.c4.table .thead .tr .th .sortable-column {
  width: 100%;
}

.c4.table > .tbody > .tr-wrapper > .tr > .td:nth-of-type(2) {
  margin-right: -5rem;
  padding-left: 0;
}

.c4.table .td {
  word-break: normal;
}

.c3 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c3 .btn {
  margin: 1rem 0;
}

.c1 {
  font-size: 2rem;
  text-align: left;
  font-family: BcSans-Bold;
}

<div
    class="c0"
  >
    <h6
      class="c1"
    >
      Payments by Term
    </h6>
    <div
      class="c2 c3"
    />
    <div
      class="table c4"
      data-testid="leasePaymentsTable"
      role="table"
    >
      <div
        class="thead thead-light"
      >
        <div
          class="tr"
          role="row"
          style="display: flex; flex: 1 0 auto; min-width: 390px;"
        >
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            />
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 100 0 auto; min-width: 60px; width: 100px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Start date - End date
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment frequency
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment due
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 70 0 auto; min-width: 30px; width: 70px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected payment ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected term ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actual total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Exercised?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actions
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-rows-message"
      >
        There is no corresponding data
      </div>
    </div>
  </div>
  <div
    class="container"
  />
  <div
    class="container"
  />
  <div
    class="container"
  />
  <div
    class="container"
  />
</DocumentFragment>
`;

exports[`PaymentsContainer component renders with data as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c6.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  min-height: 3rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c6.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c6.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c6.btn.btn-primary {
  border: none;
}

.c6.btn.btn-secondary {
  background: none;
}

.c6.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c6.btn.btn-info:hover,
.c6.btn.btn-info:active,
.c6.btn.btn-info:focus {
  background: none;
}

.c6.btn.btn-light {
  border: none;
}

.c6.btn.btn-dark {
  border: none;
}

.c6.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  padding: 0;
}

.c6.btn.btn-link:hover,
.c6.btn.btn-link:active,
.c6.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c6.btn.btn-link:disabled,
.c6.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c6.btn:disabled,
.c6.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c6.Button .Button__icon {
  margin-right: 1.6rem;
}

.c6.Button--icon-only:focus {
  outline: none;
}

.c6.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 {
  margin-left: 1rem;
  font-size: 1.4rem;
  grid-template-columns: [controls] 1fr;
}

.c0 label {
  font-family: 'BCSans-Bold';
}

.c0 .check-field {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .check-field label {
  width: 100%;
}

.c0 .form-group {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .form-group input,
.c0 .form-group select {
  width: 70%;
}

.c0 > .form-label {
  grid-column: controls;
  font-family: 'BcSans-Bold';
}

.c0 .form-control {
  font-family: 'BcSans';
}

.c0 .required .form-label:after {
  content: ' *';
}

.c4.table {
  min-width: 155rem;
}

.c4.table .thead .tr .th {
  padding: 0.5rem 0.5rem;
  font-size: 1.4rem;
  position: relative;
  color: white;
}

.c4.table .thead .tr .th .tooltip-icon {
  color: white;
  float: right;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-left: 0.5rem;
  height: 1.1rem;
  width: 1.1rem;
}

.c4.table .thead .tr .th .sortable-column {
  width: 100%;
}

.c4.table > .tbody > .tr-wrapper > .tr > .td:nth-of-type(2) {
  margin-right: -5rem;
  padding-left: 0;
}

.c4.table .td {
  word-break: normal;
}

.c3 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c3 .btn {
  margin: 1rem 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  gap: 3rem;
  background-color: white;
  min-height: 6rem;
}

.c1 {
  font-size: 2rem;
  text-align: left;
  font-family: BcSans-Bold;
}

.c5 .btn.btn-primary {
  background-color: transparent;
  padding: 0;
}

<div
    class="c0"
  >
    <h6
      class="c1"
    >
      Payments by Term
    </h6>
    <div
      class="c2 c3"
    />
    <div
      class="table c4"
      data-testid="leasePaymentsTable"
      role="table"
    >
      <div
        class="thead thead-light"
      >
        <div
          class="tr"
          role="row"
          style="display: flex; flex: 1 0 auto; min-width: 390px;"
        >
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            />
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 100 0 auto; min-width: 60px; width: 100px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Start date - End date
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment frequency
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment due
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 70 0 auto; min-width: 30px; width: 70px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected payment ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected term ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actual total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Exercised?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actions
            </div>
          </div>
        </div>
      </div>
      <div
        class="tbody"
        role="rowgroup"
      >
        <div
          class="tr-wrapper"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 390px;"
          >
            <div
              class="td expander svg-btn"
            >
              <svg
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 17l5-5-5-5v10z"
                />
                <path
                  d="M0 24V0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              Initial term
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 60px; width: 100px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
               - 
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            />
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            />
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 70 0 auto; min-width: 30px; width: 70px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              $0
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              N
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              $0
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              N
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              <div
                class="c2 c5"
              >
                <button
                  class="c6 Button Button--icon-only btn btn-primary"
                  title="edit term"
                  type="button"
                >
                  <div
                    class="Button__icon"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      id="edit-term-0"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        edit term
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="collapse"
            style="padding: 10px;"
          >
            <div
              class="row"
            >
              <div
                class="c7 col-md-2"
              >
                <svg
                  class="receipt"
                  fill="currentColor"
                  height="24"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18 17H6v-2h12v2zm0-4H6v-2h12v2zm0-4H6V7h12v2zM3 22l1.5-1.5L6 22l1.5-1.5L9 22l1.5-1.5L12 22l1.5-1.5L15 22l1.5-1.5L18 22l1.5-1.5L21 22V2l-1.5 1.5L18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2 4.5 3.5 3 2v20z"
                  />
                </svg>
                <div
                  class="c8"
                >
                  <b>
                    Payments Received
                  </b>
                </div>
              </div>
              <div
                class="col-md-10"
              >
                <div
                  class="c2 c9"
                >
                  <p>
                    There are no recorded payments for this term.
                  </p>
                  <p>
                    Term must be exercised to add payments.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container"
  />
  <div
    class="container"
  />
  <div
    class="container"
  />
  <div
    class="container"
  />
</DocumentFragment>
`;

exports[`PaymentsForm component renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  gap: 3rem;
  background-color: white;
  min-height: 6rem;
}

<div
    class="row"
  >
    <div
      class="c0 col-md-2"
    >
      <svg
        class="receipt"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M18 17H6v-2h12v2zm0-4H6v-2h12v2zm0-4H6V7h12v2zM3 22l1.5-1.5L6 22l1.5-1.5L9 22l1.5-1.5L12 22l1.5-1.5L15 22l1.5-1.5L18 22l1.5-1.5L21 22V2l-1.5 1.5L18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2 4.5 3.5 3 2v20z"
        />
      </svg>
      <div
        class="c1"
      >
        <b>
          Payments Received
        </b>
      </div>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="c2 c3"
      >
        <p>
          There are no recorded payments for this term.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentsForm component renders with data as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  gap: 3rem;
  background-color: white;
  min-height: 6rem;
}

<div
    class="row"
  >
    <div
      class="c0 col-md-2"
    >
      <svg
        class="receipt"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M18 17H6v-2h12v2zm0-4H6v-2h12v2zm0-4H6V7h12v2zM3 22l1.5-1.5L6 22l1.5-1.5L9 22l1.5-1.5L12 22l1.5-1.5L15 22l1.5-1.5L18 22l1.5-1.5L21 22V2l-1.5 1.5L18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2 4.5 3.5 3 2v20z"
        />
      </svg>
      <div
        class="c1"
      >
        <b>
          Payments Received
        </b>
      </div>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="c2 c3"
      >
        <p>
          There are no recorded payments for this term.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
